--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <body>
     
     <div class="container">
-        
+        <div class="product">
+            <div class="gallery">
+                <img src="images/image1.png" alt="">
+            </div>
+            <div class="details"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
