product container styled

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
             <div class="gallery">
                 <img src="images/image1.png" alt="">
             </div>
-            <div class="details"></div>
+            <div class="details">
+                <h1>Casual T-shirt</h1>
+                <h2>$15.00</h2>
+                <h3>30% off</h3>
+                <p>wrangler is an american manufacturer of clothing and footwear.they are a subsidiary of wrangler brand</p>
+            </div>
         </div>
     </div>
     <script src="script.js"></script>
