--- a/index.html
+++ b/index.html
@@ -18,6 +18,37 @@
                 <h2>$15.00</h2>
                 <h3>30% off</h3>
                 <p>wrangler is an american manufacturer of clothing and footwear.they are a subsidiary of wrangler brand</p>
+                
+                <form >
+                    <div class="size-select">
+                        <p>Size</p>
+                        <label for="small">
+                            <input type="radio" name="size" id="small" value="small">
+                            <span>S</span>
+                        </label>
+
+                        <label for="medium">
+                            <input type="radio" name="size" id="medium" value="medium">
+                            <span>M</span>
+                        </label>
+
+                        <label for="large">
+                            <input type="radio" name="size" id="large" value="large">
+                            <span>L</span>
+                        </label>
+
+                        <label for="extra-large">
+                            <input type="radio" name="size" id="extra-large" value="extra-large">
+                            <span>XL</span>
+                        </label>
+
+                        <label for="xx-large">
+                            <input type="radio" name="size" id="xx-large" value="xx-large">
+                            <span>XXL</span>
+                        </label>
+
+                    </div>
+                </form>
             </div>
         </div>
     </div>
