--- a/index.html
+++ b/index.html
@@ -46,7 +46,28 @@
                             <input type="radio" name="size" id="xx-large" value="xx-large">
                             <span>XXL</span>
                         </label>
+                    </div>
+                    <div class="color-select">
+                        <p>Color</p>
+                        <label for="red">
+                            <input type="radio" name="color" id="red" value="red">
+                            <span class="color-1"></span>
+                        </label>
 
+                        <label for="red">
+                            <input type="radio" name="color" id="green" value="green">
+                            <span class="color-2"></span>
+                        </label>
+
+                        <label for="red">
+                            <input type="radio" name="color" id="blue" value="blue">
+                            <span class="color-3"></span>
+                        </label>
+
+                        <label for="red">
+                            <input type="radio" name="color" id="pink" value="pink">
+                            <span class="color-4"></span>
+                        </label>
                     </div>
                 </form>
             </div>
