errors solved and quantity field added

--- a/index.html
+++ b/index.html
@@ -47,27 +47,33 @@
                             <span>XXL</span>
                         </label>
                     </div>
+                    
                     <div class="color-select">
                         <p>Color</p>
                         <label for="red">
-                            <input type="radio" name="color" id="red" value="red">
+                            <input type="radio" name="color" id="red">
                             <span class="color-1"></span>
                         </label>
 
-                        <label for="red">
-                            <input type="radio" name="color" id="green" value="green">
+                        <label for="green">
+                            <input type="radio" name="color" id="green">
                             <span class="color-2"></span>
                         </label>
 
-                        <label for="red">
-                            <input type="radio" name="color" id="blue" value="blue">
+                        <label for="blue">
+                            <input type="radio" name="color" id="blue">
                             <span class="color-3"></span>
                         </label>
 
-                        <label for="red">
-                            <input type="radio" name="color" id="pink" value="pink">
+                        <label for="pink">
+                            <input type="radio" name="color" id="pink">
                             <span class="color-4"></span>
                         </label>
+                    </div>
+
+                    <div class="quantity-select">
+                        <p>Quantity</p>
+                        <input type="number" name="quantity" id="quantity" min="1" max="10">
                     </div>
                 </form>
             </div>
