image gallery button added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
         <div class="product">
             <div class="gallery">
                 <img src="images/image1.png" alt="">
+                <div class="controls">
+                    <span class="btn active"></span>
+                    <span class="btn"></span>
+                    <span class="btn"></span>
+                </div>
             </div>
             <div class="details">
                 <h1>Casual T-shirt</h1>
@@ -73,8 +78,10 @@
 
                     <div class="quantity-select">
                         <p>Quantity</p>
-                        <input type="number" name="quantity" id="quantity" min="1" max="10">
+                        <input type="number" name="quantity" id="quantity" value="1">
                     </div>
+
+                    <button>Buy Now</button>
                 </form>
             </div>
         </div>
