--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="product">
             <div class="gallery">
-                <img src="images/image1.png" alt="">
+                <img src="images/image1.png" id="productImage">
                 <div class="controls">
                     <span class="btn active"></span>
                     <span class="btn"></span>
